force-app/main/default/objects/Project_Request__c/Project_Request__c.object-meta.xml
<CustomObject>
    <description>Object that will contain project requests from the SFDC community</description>
    <label>Project Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>