force-app/main/default/objects/Project_Request__c/fields/Include_in_Staff_Meeting_Update__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Staff_Meeting_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Staff Meeting Update</label>
    <type>Checkbox</type>
</CustomField>