force-app/main/default/objects/Project_Request__c/fields/PR_Business_Requestor__c.field-meta.xml
<CustomField>
    <fullName>PR_Business_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter Business Stakeholder</inlineHelpText>
    <label>Business Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>