force-app/main/default/objects/Project_Request__c/fields/PR_Estimated_Points__c.field-meta.xml
<CustomField>
    <fullName>PR_Estimated_Points__c</fullName>
    <description>IT story estimated LOE points</description>
    <inlineHelpText>IT story estimated LOE points</inlineHelpText>
    <label>Estimated Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>