force-app/main/default/objects/Project_Request__c/fields/PR_Expected_Delivery__c.field-meta.xml
<CustomField>
    <fullName>PR_Expected_Delivery__c</fullName>
    <inlineHelpText>The deadline in which this needs to be finished by.</inlineHelpText>
    <label>Expected Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1 2023</fullName>
            </value>
            <value>
                <fullName>Q2 2023</fullName>
            </value>
            <value>
                <fullName>Q3 2023</fullName>
            </value>
            <value>
                <fullName>Q4 2023</fullName>
            </value>
            <value>
                <fullName>Q1 2021</fullName>
                <isActive>false</isActive>
                <label>Q1 2021</label>
            </value>
            <value>
                <fullName>Q1 2022</fullName>
                <isActive>false</isActive>
                <label>Q1 2022</label>
            </value>
            <value>
                <fullName>Q2 2021</fullName>
                <isActive>false</isActive>
                <label>Q2 2021</label>
            </value>
            <value>
                <fullName>Q2 2022</fullName>
                <isActive>false</isActive>
                <label>Q2 2022</label>
            </value>
            <value>
                <fullName>Q3 2021</fullName>
                <isActive>false</isActive>
                <label>Q3 2021</label>
            </value>
            <value>
                <fullName>Q3 2022</fullName>
                <isActive>false</isActive>
                <label>Q3 2022</label>
            </value>
            <value>
                <fullName>Q4 2021</fullName>
                <isActive>false</isActive>
                <label>Q4 2021</label>
            </value>
            <value>
                <fullName>Q4 2022</fullName>
                <isActive>false</isActive>
                <label>Q4 2022</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>