force-app/main/default/objects/Project_Request__c/fields/PR_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>PR_Functional_Group__c</fullName>
    <label>Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>CATM</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Channel Operations</fullName>
            </value>
            <value>
                <fullName>Channel Programs</fullName>
                <isActive>false</isActive>
                <label>Channel Programs</label>
            </value>
            <value>
                <fullName>Global Sales Ops</fullName>
                <label>CSO</label>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
                <isActive>false</isActive>
                <label>Customer Experience</label>
            </value>
            <value>
                <fullName>CX - Banking</fullName>
                <isActive>false</isActive>
                <label>CX - Banking</label>
            </value>
            <value>
                <fullName>CX-Hosp Enterprise</fullName>
                <isActive>false</isActive>
                <label>CX-Hosp Enterprise</label>
            </value>
            <value>
                <fullName>Digital Banking ISV</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>GainSight</fullName>
            </value>
            <value>
                <fullName>GSO - CLM</fullName>
                <isActive>false</isActive>
                <label>GSO - CLM</label>
            </value>
            <value>
                <fullName>GSO - CPQ</fullName>
                <isActive>false</isActive>
                <label>GSO - CPQ</label>
            </value>
            <value>
                <fullName>GSO - Seismic</fullName>
                <isActive>false</isActive>
                <label>GSO - Seismic</label>
            </value>
            <value>
                <fullName>GSO - SFDC</fullName>
                <isActive>false</isActive>
                <label>GSO - SFDC</label>
            </value>
            <value>
                <fullName>HOSP - Enterprise</fullName>
            </value>
            <value>
                <fullName>HOSP-SMB</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
                <isActive>false</isActive>
                <label>IT</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
                <isActive>false</isActive>
                <label>Payments</label>
            </value>
            <value>
                <fullName>Payments &amp; Network</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
                <isActive>false</isActive>
                <label>Professional Services</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
                <isActive>false</isActive>
                <label>TNT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>