force-app/main/default/objects/Project_Request__c/fields/PR_Group_Features__c.field-meta.xml
<CustomField>
    <fullName>PR_Group_Features__c</fullName>
    <description>Project Request Functional Group Features-</description>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PR_Functional_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account 360</fullName>
            </value>
            <value>
                <fullName>Altify</fullName>
            </value>
            <value>
                <fullName>APOC Standardization</fullName>
            </value>
            <value>
                <fullName>Arch Spec</fullName>
            </value>
            <value>
                <fullName>Asset/Subscription</fullName>
                <isActive>false</isActive>
                <label>Asset/Subscription</label>
            </value>
            <value>
                <fullName>Bottoms Up</fullName>
            </value>
            <value>
                <fullName>Bug Issues</fullName>
            </value>
            <value>
                <fullName>Case Improvement</fullName>
            </value>
            <value>
                <fullName>CATM Enhancements</fullName>
            </value>
            <value>
                <fullName>CCAD</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
                <isActive>false</isActive>
                <label>CFS</label>
            </value>
            <value>
                <fullName>Champion Training</fullName>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ Training</fullName>
            </value>
            <value>
                <fullName>Customer Community</fullName>
            </value>
            <value>
                <fullName>Customer Survey</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Drift Integration</fullName>
                <isActive>false</isActive>
                <label>Drift Integration</label>
            </value>
            <value>
                <fullName>EBT</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Gainsight</fullName>
            </value>
            <value>
                <fullName>General Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>