force-app/main/default/objects/Project_Request__c/fields/PR_JIRA_Story__c.field-meta.xml
<CustomField>
    <fullName>PR_JIRA_Story__c</fullName>
    <description>Jira Story number</description>
    <label>PR Jira Story</label>
    <length>60</length>
    <type>Text</type>
</CustomField>