force-app/main/default/objects/Project_Request__c/fields/PR_Meet_with_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>PR_Meet_with_Stakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meet with Stakeholder</label>
    <type>Checkbox</type>
</CustomField>