force-app/main/default/objects/Project_Request__c/fields/PR_Priority__c.field-meta.xml
<CustomField>
    <fullName>PR_Priority__c</fullName>
    <inlineHelpText>P1 - Critical; P2 - Major; P3 - Minor</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>