force-app/main/default/objects/Project_Request__c/fields/PR_Stage__c.field-meta.xml
<CustomField>
    <fullName>PR_Stage__c</fullName>
    <inlineHelpText>The current status of this project.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uncommitted</fullName>
                <default>true</default>
                <label>Uncommitted</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Sprint Assigned</fullName>
            </value>
            <value>
                <fullName>In Current Sprint</fullName>
            </value>
            <value>
                <fullName>SPIKE- Complete</fullName>
            </value>
            <value>
                <fullName>Completed - pending deployment</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>ON HOLD-POST SPLIT</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <isActive>false</isActive>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <isActive>false</isActive>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Temporary</fullName>
                <isActive>false</isActive>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>