force-app/main/default/objects/Project_Request__c/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <label>Project Notes</label>
    <type>TextArea</type>
</CustomField>