force-app/main/default/objects/Project_Request__c/fields/Story_Count__c.field-meta.xml
<CustomField>
    <fullName>Story_Count__c</fullName>
    <description>User Story Count</description>
    <label>User Story Count</label>
    <summaryForeignKey>JIRA_User_Story__c.Project_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>