force-app/main/default/objects/Project_Request__c/validationRules/Implementation_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Date_Required</fullName>
    <active>true</active>
    <description>Actual Delivery Date required when Status is marked Completed</description>
    <errorConditionFormula>AND( ISPICKVAL( PR_Stage__c , &quot;Deployed&quot;),  
ISBLANK(PR_Implementation_Date__c))</errorConditionFormula>
    <errorDisplayField>PR_Implementation_Date__c</errorDisplayField>
    <errorMessage>Please update the Implementation Date</errorMessage>
</ValidationRule>