force-app/main/default/objects/Project_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PR_Stage__c</columns>
    <columns>PR_Business_Analyst__c</columns>
    <columns>PR_IT_Development__c</columns>
    <columns>Devlopment__c</columns>
    <columns>Sprint__c</columns>
    <columns>PR_Group_Features__c</columns>
    <columns>PR_Functional_Group__c</columns>
    <columns>PR_JIRA_Story__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>PR_Business_Requestor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>SF2023 Sprint 04 (Mar8-Mar28)</value>
    </filters>
    <label>All</label>
</ListView>