force-app/main/default/objects/Project_Request__c/listViews/All_Gainsight_Project_Request.listView-meta.xml
<ListView>
    <fullName>All_Gainsight_Project_Request</fullName>
    <columns>NAME</columns>
    <columns>PR_Business_Requestor__c</columns>
    <columns>PR_Description__c</columns>
    <columns>PR_Stage__c</columns>
    <columns>PR_Committed_QTR__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PR_Functional_Group__c</columns>
    <columns>PR_Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PR_Program__c</field>
        <operation>equals</operation>
        <value>Gainsight Project</value>
    </filters>
    <label>All Gainsight Project Request</label>
    <sharedTo>
        <group>Gainsight</group>
    </sharedTo>
</ListView>