force-app/main/default/objects/Project_Request__c/listViews/BANKING_Project_Request.listView-meta.xml
<ListView>
    <fullName>BANKING_Project_Request</fullName>
    <columns>NAME</columns>
    <columns>PR_Description__c</columns>
    <columns>PR_Business_Analyst__c</columns>
    <columns>PR_Stage__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PR_Functional_Group__c</field>
        <operation>equals</operation>
        <value>Banking</value>
    </filters>
    <label>_BANKING</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>