force-app/main/default/objects/Project_Request__c/listViews/CHANNEL.listView-meta.xml
<ListView>
    <fullName>CHANNEL</fullName>
    <columns>PR_Priority__c</columns>
    <columns>NAME</columns>
    <columns>PR_Description__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PR_Stage__c</columns>
    <columns>PR_IT_Development__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PR_Functional_Group__c</field>
        <operation>equals</operation>
        <value>Channel Operations,Channel Programs</value>
    </filters>
    <filters>
        <field>PR_Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Declined,Deployed</value>
    </filters>
    <label>_CHANNEL</label>
</ListView>