force-app/main/default/objects/Project_Request__c/listViews/Created_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_7_Days</fullName>
    <columns>Project_Year__c</columns>
    <columns>PR_Priority__c</columns>
    <columns>NAME</columns>
    <columns>PR_Functional_Group__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>PR_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <filters>
        <field>PR_Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Declined,Completed - pending deployment,Deployed</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Bradley Day</value>
    </filters>
    <label>Created Last 30 Days</label>
    <sharedTo>
        <group>GSO_Admins</group>
    </sharedTo>
</ListView>