force-app/main/default/objects/Project_Request__c/listViews/HOSP_SMB.listView-meta.xml
<ListView>
    <fullName>HOSP_SMB</fullName>
    <columns>NAME</columns>
    <columns>PR_Priority__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>PR_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PR_Functional_Group__c</field>
        <operation>equals</operation>
        <value>HOSP-SMB</value>
    </filters>
    <label>_HOSP - SMB</label>
</ListView>