force-app/main/default/objects/Project_Request__c/listViews/MARKETING.listView-meta.xml
<ListView>
    <fullName>MARKETING</fullName>
    <columns>NAME</columns>
    <columns>PR_Description__c</columns>
    <columns>PR_Priority__c</columns>
    <columns>PR_Expected_Delivery__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PR_Stage__c</columns>
    <columns>PR_IT_Development__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PR_Functional_Group__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <label>_MARKETING</label>
</ListView>