force-app/main/default/objects/Project_Request__c/listViews/PR_Gainsight_Project_Request.listView-meta.xml
<ListView>
    <fullName>PR_Gainsight_Project_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Gainsight</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>